// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImplicitUi should pass prop property as props to component 1`] = `
<p>
  This is my text
</p>
`;

exports[`ImplicitUi should render children prop as children to component 1`] = `
<div>
  <h3>
    MyHeader
  </h3>
  <div>
    <h1>
      My Title
    </h1>
    <h1>
      My Title
    </h1>
  </div>
</div>
`;

exports[`ImplicitUi should render from children if object 1`] = `
<h1>
  My Title
</h1>
`;

exports[`ImplicitUi should render list of components 1`] = `
Array [
  <h1>
    My Title
  </h1>,
  <h1>
    My Title
  </h1>,
]
`;

exports[`ImplicitUi should render prop components with their own children 1`] = `
<div>
  <div>
    <h3>
      Header 1
    </h3>
    <div>
      <p>
        Paragraph 1
      </p>
      <p>
        Paragraph 2
      </p>
    </div>
  </div>
  <p>
    Paragraph 3
  </p>
</div>
`;

exports[`ImplicitUi should render prop components with their own props 1`] = `
<div>
  <p>
    Paragraph 1
  </p>
  <p>
    Paragraph 2
  </p>
</div>
`;

exports[`ImplicitUi should render props that is object and has a name in component list as component 1`] = `
<div>
  <h1>
    My Title
  </h1>
  <h1>
    My Title
  </h1>
</div>
`;

exports[`ImplicitUi should return null if no ui 1`] = `null`;

exports[`ImplicitUi should use name prop as component name 1`] = `
<h1>
  My Title
</h1>
`;

exports[`ImplicitUi should use strings as component name 1`] = `
<h1>
  My Title
</h1>
`;
